--- a/README
+++ b/README
@@ -1,17 +1,17 @@
-Regional Tileserver
-###################
+# Regional Tileserver
+
 
 This repo contains install and import scripts to host a regional part of a vector tile server backed by Openstreetmap
 data, currently used by the StreetComplete App.
 
 
-Warning
-#######
+# Warning
+
 
 currently only tested on a Debian Testing (Debian Buster) Server
 
-Setup
-#####
+# Setup
+
 
 install dependencies, database user and some needed files:
 
@@ -23,14 +23,25 @@ Copy and modify systemd file:
     sudo vim /etc/systemd/system/tileserver-gunicorn@.service
     sudo systemctl daemon-reload
 
-Configure
-#########
+# Configure
+
+
+
+add a User to the Database:
+
+    sudo -u postgres psql
+    create user osm with encrypted password 'mypass';
+
 
 copy settings.sh.example to settings.sh
 
+add the Postgress password to the settings.sh
 
-Import Database
-###############
+
+Tuning the Database configs: TODO (incrase memory in various places)
+
+# Import Database
+
 
 
 the default port used will be 8001. (see ../workdir/port_mapping)
@@ -53,8 +64,8 @@ To integrate it into the global tileserver expose the port to the internet (best
 in front of it) and ping @Akasch.
 
 
-Update Data
-###########
+# Update Data
+
 
 Currently the used data is sliced at most once per week. To reimport the data just rerun the import command. This will
 import the data into a second Database (defaults to <tile>_b) and switch them at the end so the old data gets served until
